[gd_scene load_steps=4 format=3 uid="uid://bkp4wnlayhdqs"]

[ext_resource type="Script" uid="uid://x3ygjb8d136g" path="res://scripts/game_manager.gd" id="1_e5fcp"]
[ext_resource type="FontFile" uid="uid://dvwd2jyhsoieg" path="res://Resources/fonts/Pixellari.ttf" id="2_sq00h"]
[ext_resource type="PackedScene" uid="uid://bbmge1qvbt5le" path="res://UI/scene_transition.tscn" id="3_sq00h"]

[node name="GameManager" type="Node"]
script = ExtResource("1_e5fcp")

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="Level_UI" type="Control" parent="GameUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameUI/Level_UI"]
layout_mode = 1
offset_right = 316.0
offset_bottom = 120.0
color = Color(0, 0, 0, 0.376471)

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/Level_UI/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="minute_label" type="Label" parent="GameUI/Level_UI/ColorRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sq00h")
theme_override_font_sizes/font_size = 80
text = "00:"
horizontal_alignment = 2

[node name="second_label" type="Label" parent="GameUI/Level_UI/ColorRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sq00h")
theme_override_font_sizes/font_size = 80
text = "00."
horizontal_alignment = 2

[node name="msec_label" type="Label" parent="GameUI/Level_UI/ColorRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sq00h")
theme_override_font_sizes/font_size = 80
text = "00"

[node name="Win_Screen" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameUI/Win_Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 250)
color = Color(0, 0, 0, 0.45098)

[node name="Delivered" type="Label" parent="GameUI/Win_Screen/ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_sq00h")
theme_override_font_sizes/font_size = 71
text = "DELIVERED!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="GameUI/Win_Screen/ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 66.0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Level Select"

[node name="Button2" type="Button" parent="GameUI/Win_Screen/ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -170.0
offset_right = 197.0
offset_bottom = -90.0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Main Menu"

[node name="SceneTransition" parent="." instance=ExtResource("3_sq00h")]
